# readable

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml  build.yml  ci.yml  clippy.yml  doc.yml  fuzz.yml  linux.yml  macos.yml  miri.yml  test.yml  windows.yml
.github/workflows/disabled/: miri.yml
date/: Cargo.toml
date/src/: _1900.rs  _1910.rs  _1920.rs  _1930.rs  _1940.rs  _1950.rs  _1960.rs  _1970.rs  _1980.rs  _1990.rs  _2000.rs  _2010.rs  _2020.rs  _2030.rs  _2040.rs  _2050.rs  _2060.rs  _2070.rs  _2080.rs  _2090.rs  day.rs  lib.rs  month.rs  year.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: byte.rs  date.rs  float.rs  int.rs  run.rs  str.rs  time.rs  toa.rs  unsigned.rs  up.rs
inlined/date/: Cargo.toml
inlined/percent/: README.md
inlined/percent/src/: _0.rs  _75.rs
inlined/runtime/: Cargo.toml  README.md
inlined/runtime/src/: lib.rs
inlined/time/: README.md
inlined/time/src/: lib.rs
percent/: Cargo.toml
percent/src/: _0.rs  _25.rs  _50.rs  _75.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: _0.rs  _100772.rs  _100800.rs  _104371.rs  _104400.rs  _10797.rs  _107970.rs  _10800.rs  _108000.rs  _111569.rs  _111600.rs  _115168.rs  _115200.rs  _118767.rs  _118800.rs  _122366.rs  _122400.rs  _125965.rs  _126000.rs  _129564.rs  _129600.rs  _133163.rs  _133200.rs  _136762.rs  _136800.rs  _140361.rs  _140400.rs  _14396.rs  _143960.rs  _14400.rs  _144000.rs  _147559.rs  _147600.rs  _151158.rs  _151200.rs  _154757.rs  _154800.rs  _158356.rs  _158400.rs  _161955.rs  (+160 more)
src/: borsh_serde.rs  buf.rs  byte.rs  constants.rs  date.rs  float.rs  free.rs  headtail.rs  inner.rs  int.rs  lib.rs  macros.rs  percent.rs  runtime.rs  time.rs  unsigned.rs
src/byte/: byte.rs  mod.rs
src/date/: date.rs  free.rs  mod.rs  nichi.rs  nichi_full.rs  sysdate.rs
src/fast/: diyfp.rs  dtoa.rs  itoa.rs  mod.rs  udiv128.rs
src/num/: buf.rs  constants.rs  float.rs  int.rs  mod.rs  percent.rs  unsigned.rs
src/run/: mod.rs  runtime.rs  runtime_milli.rs  runtime_pad.rs  runtime_union.rs
src/str/: headtail.rs  mod.rs  str.rs
src/time/: date.rs  free.rs  htop.rs  military.rs  mod.rs  runtime.rs  runtime_full.rs  runtime_milli.rs  runtime_union.rs  systime.rs  time.rs  time_full.rs  time_unit.rs  uptime.rs
src/toa/: diyfp.rs  dtoa.rs  itoa.rs  mod.rs  udiv128.rs
src/up/: htop.rs  mod.rs  sys_uptime.rs  uptime.rs  uptime_full.rs
time/: Cargo.toml  README.md
