[package]
name = "readable"
version = "0.14.0"
edition = "2021"
authors = ["hinto.janai <hinto.janai@protonmail.com>"]
description = "Human readable strings"
documentation = "https://docs.rs/readable"
repository = "https://github.com/hinto-janai/readable"
readme = "README.md"
keywords = ["human", "readable", "data", "formatting", "string"]
license = "MIT"
exclude = [
	"inlined",
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["serde", "bincode"]
#ignore_nan_inf = []
#inline_date    = ["readable-inlined-date"]
#inline_time    = ["readable-inlined-time"]
#inline_runtime = ["readable-inlined-runtime"]
#inline_percent = ["readable-inlined-percent"]

[dependencies]
paste = { version = "1.0.14" }

# (De)serialization
serde       = { version = "1.0.193", features = ["derive"], optional = true }
bincode     = { version = "2.0.0-rc.3", features = ["serde", "derive"], optional = true }

# Num
compact_str = { version = "0.7.1", features = ["bytes", "serde"] }
seq-macro   = { version = "0.3.5" }

# Date
regex       = { version = "1.10.2" }
once_cell   = { version = "1.18.0" }
nichi       = { version = "0.5.1" }
chrono      = { version = "0.4.31" }

# Uptime
[target.'cfg(not(windows))'.dependencies]
libc    = { version = "0.2.150" }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = ["Win32_System_SystemInformation"] }

# Inlined crates.
#readable-inlined-date    = { version = "0.1.2", optional = true }
#readable-inlined-time    = { version = "0.1.0", optional = true }
#readable-inlined-runtime = { version = "0.1.2", optional = true }
#readable-inlined-percent = { version = "0.1.0", optional = true }
